# loan-prediction

./: .gitignore  note.txt  package-lock.json  pyproject.toml
loan_app/: ml_model.pkl  urls.py  views.py
myproject/: settings.py  urls.py
pages/: views.py
pages/templates/: index.html
