[tool.poetry]
name = "ts-django-template"
version = "0.1.0"
description = ""
authors = ["Ariefan Dipokusumo Wibowo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
drf-yasg = "^1.21.7"
djangorestframework = "^3.15.1"
python-telegram-bot = "^21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
