[tool.poetry]
name = "ts-django-template"
version = "0.1.0"
description = ""
authors = ["Ariefan Dipokusumo Wibowo"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
drf-yasg = "^1.21.7"
djangorestframework = "^3.15.1"
python-telegram-bot = "^21.3"
joblib = "^1.4.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "1.2.2"
django-cors-headers = "^4.3.1"
cython = "^3.0.10"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
